.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/Pay_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Transaction_Date__c</fullName>
    <formula>tc9_pr__Pay_Transaction__r.tc9_pr__Entry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Transaction Date</label>
    <type>Date</type>
</CustomField>