.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/Payroll_Tax_Locality__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Tax_Locality__c</fullName>
    <formula>text(tc9_pr__Payroll_Tax_Emp_Cost_Item__r.tc9_pr__Location__r.tc9_pr__Payroll_Tax_Locality__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Derived from the Payroll Tax Emp Cost Item - Location - Payroll Tax Locality</inlineHelpText>
    <label>Payroll Tax Locality</label>
    <type>Text</type>
</CustomField>