.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/Workcover_Locality__c.field-meta.xml
<CustomField>
    <fullName>Workcover_Locality__c</fullName>
    <formula>text(tc9_pr__WorkCover_Emp_Cost_Item__r.tc9_pr__Location__r.tc9_pr__WorkCover_Locality__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Derived from the WC Employment Cost Item - Location - WC locality</inlineHelpText>
    <label>Workcover Locality</label>
    <type>Text</type>
</CustomField>